--- a/style.css
+++ b/style.css
@@ -16,11 +16,11 @@ html {
     font-size: 60%;
     overflow-x: hidden;
 }
-body{
+body {
     background: var(--bg-color);
     color: var(--text-color);
 }
-.header{
+.header {
     position: fixed;
     width: 100%;
     top: 0;
@@ -28,31 +28,31 @@ body{
     padding: 4rem 15%;
     background: rgba(0,0,0,0.3);
     backdrop-filter: blur(10px);
-    display:flex;
-    justify-content:space-between;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    z-index:1000;
+    z-index: 1000;
 }
-#menu-icon{
+#menu-icon {
     font-size: 3.5rem;
     color: var(--main-color);
     display: none;
 }
-.logo{
+.logo {
     font-size: 3rem;
     color: var(--text-color);
     font-weight: 800;
     cursor: pointer;
     transition: 0.3s ease-in-out;
 }
-.logo:hover{
+.logo:hover {
     transform: scale(1.1);
 }
-span{
+span {
     color: #610cea;
     background-clip: text;
 }
-.navbar a{
+.navbar a {
     font-size: 1.8rem;
     color: var(--text-color);
     margin-left: 4rem;
@@ -60,56 +60,52 @@ span{
     transition: 0.3s ease-in-out;
     border-bottom: 3px solid transparent;
 }
-.navbar a:hover{
-    color:var(--main-color);
+.navbar a:hover {
+    color: var(--main-color);
     border-bottom: 3px solid var(--main-color);
 }
-.gradient-btn{
+.gradient-btn {
     font-size: 1.8rem;
-    padding:1rem 2rem;
+    padding: 1rem 2rem;
     border-radius: 3rem;
-    background: linear-gradient(
-        270deg,
-        #6200ff 10%,
-        #6200ff 100%
-    );
+    background: linear-gradient(270deg, #6200ff 10%, #6200ff 100%);
     letter-spacing: 1px;
     cursor: pointer;
     transition: 0.3s ease-in-out;
     color: white;
     border: none;
-    text-wrap:nowrap;
+    text-wrap: nowrap;
 }
-.gradient-btn:hover{
+.gradient-btn:hover {
     transform: scale(1.05);
 }
-section{
+section {
     min-height: 100vh;
     padding: 10rem 15%;
 }
-.home{
+.home {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 15rem;
 }
-.home-content{
-    display:flex;
+.home-content {
+    display: flex;
     flex-direction: column;
     align-items: flex-end;
     text-align: right;
 }
-.home-content h1{
+.home-content h1 {
     font-size: 8rem;
     font-weight: 700;
     margin-top: 1.5rem;
     line-height: 1;
 }
-.home-content h3{
+.home-content h3 {
     margin: 1rem 0;
     font-size: 4rem;
 }
-.home-content p{
+.home-content p {
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.8;
@@ -122,28 +118,24 @@ section{
     transition: ease-in-out;
     animation: imgFloat 2.8s ease-in-out infinite;
 }
-
 .home-img img:hover {
     box-shadow: 0 0 25px var(--main-color),
                 0 0 50px var(--main-color),
                 0 0 100px var(--main-color);
 }
-
 @keyframes imgFloat {
     50% {
         transform: translateY(10px);
         border-radius: 45% 55% 45% 55%;
     }
 }
-
 .image img {
     width: 380px;
     height: 380px;
     object-fit: cover;
 }
-
-.social-icons a{
-    display:inline-flex;
+.social-icons a {
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     font-size: 3rem;
@@ -155,21 +147,21 @@ section{
     margin: 3rem 0.5rem;
     transition: 0.3s ease-in-out;
 }
-.social-icons a:hover{
+.social-icons a:hover {
     color: var(--text-color);
     background-color: var(--main-color);
-    transform: scale(1.2)translateY(-5px);
-    box-shadow: 0 0 25px var(--main-color); 
+    transform: scale(1.2) translateY(-5px);
+    box-shadow: 0 0 25px var(--main-color);
 }
-.btn-group{
+.btn-group {
     display: flex;
     gap: 1.5rem;
 }
-.btn{
+.btn {
     display: inline-block;
     padding: 1rem 3rem;
     background-color: var(--main-color);
-    box-shadow:0 0 25px var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
     border-radius: 3rem;
     font-size: 1.8rem;
     color: black;
@@ -177,41 +169,41 @@ section{
     font-weight: 600;
     transition: 0.3s ease-in-out;
 }
-.btn:hover{
+.btn:hover {
     transform: scale(1.05);
     box-shadow: 0 0 25px var(--main-color),
                 0 0 50px var(--main-color);
 }
-.btn-group a:nth-of-type(2){
+.btn-group a:nth-of-type(2) {
     background-color: black;
     color: var(--main-color);
     border: 2px solid var(--main-color);
     box-shadow: 0 0 25px transparent;
 }
-.btn-group a:nth-of-type(2):hover{
+.btn-group a:nth-of-type(2):hover {
     box-shadow: 0 0 25px var(--main-color);
     background-color: var(--main-color);
     color: black;
 }
-.heading{
+.heading {
     text-align: center;
     font-size: 7rem;
     margin: 5rem 0;
 }
-.services{
+.services {
     background-color: var(--bg-color);
     color: black;
 }
-.services h2{
+.services h2 {
     color: var(--text-color);
 }
-.services-container{
+.services-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     align-items: center;
     gap: 2.5rem;
 }
-.service-box{
+.service-box {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -222,13 +214,13 @@ section{
     border: 5px solid transparent;
     transition: 0.4s ease-in-out;
 }
-.service-box:hover{
+.service-box:hover {
     background: var(--second-bg-color);
     color: white;
     border: 5px solid var(--main-color);
     transform: scale(1.03);
 }
-.service-info{
+.service-info {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -236,29 +228,29 @@ section{
     align-items: center;
     padding: 5rem;
 }
-.service-info h4{
+.service-info h4 {
     font-size: 4rem;
     margin: 2rem 0;
     font-weight: 800;
 }
-.service-info p{
+.service-info p {
     font-size: 1.4rem;
     font-weight: 600;
     line-height: 1.7;
 }
-.service-info i{
+.service-info i {
     font-size: 8rem;
 }
-.projects{
+.projects {
     background-color: black;
 }
-.projects-box{
+.projects-box {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     align-items: center;
     gap: 2.5rem;
 }
-.project-card{
+.project-card {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -274,31 +266,40 @@ section{
     box-shadow: 0 0 5px transparent;
     transition: 0.3s ease;
 }
-.project-card:hover{
-    transform: scale(1.30);
+.project-card:hover {
+    transform: scale(1.10);
 }
-.project-card img{
+.project-card img {
     max-width: 100%;
     height: 280%;
-    border-radius:2rem;
+    border-radius: 2rem;
     object-fit: cover;
 }
-.contact{
+.project-card h3 {
+    font-size: 1.8rem;
+    color: white;
+}
+.project-card p {
+    font-size: 1.2rem;
+    color: white;
+    line-height: 1.6;
+}
+.contact {
     background-color: var(--bg-color);
 }
-.contact h2{
+.contact h2 {
     margin-bottom: 3rem;
     color: var(--text-color);
 }
-.contact form{
-    display:flex;
+.contact form {
+    display: flex;
     align-items: center;
     justify-content: center;
     gap: 3rem;
     margin: 5rem 0;
     text-align: center;
 }
-.input-field{
+.input-field {
     width: 100%;
     padding: 2.5rem;
     font-size: 2.8rem;
@@ -309,7 +310,7 @@ section{
     margin: 1.5rem 0;
 }
 .contact form .input-box input,
-.contact form textarea{
+.contact form textarea {
     width: 100%;
     padding: 2.5rem;
     font-size: 2.8rem;
@@ -319,11 +320,11 @@ section{
     border: 2px solid var(--main-color);
     margin: 1.5rem 0;
 }
-.btn-send{
+.btn-send {
     display: inline-block;
     padding: 1rem 3rem;
     background-color: white;
-    box-shadow:0 0 25px ;
+    box-shadow: 0 0 25px;
     border-radius: 3rem;
     font-size: 1.8rem;
     color: black;
@@ -331,8 +332,104 @@ section{
     font-weight: 600;
     transition: 0.3s ease-in-out;
 }
-.btn-send:hover{
+.btn-send:hover {
     transform: scale(1.05);
     box-shadow: 0 0 25px var(--main-color),
                 0 0 50px var(--main-color);
+}
+
+/* MEDIA QUERIES - Responsividade */
+@media (max-width: 1024px) {
+    html {
+        font-size: 55%;
+    }
+    .header {
+        padding: 3rem 8%;
+    }
+    section {
+        padding: 10rem 8%;
+    }
+    .home {
+        flex-direction: column-reverse;
+        gap: 5rem;
+        text-align: center;
+    }
+    .home-content {
+        align-items: center;
+        text-align: center;
+    }
+    .home-content h1 {
+        font-size: 6rem;
+    }
+    .home-content h3 {
+        font-size: 3rem;
+    }
+    .home-img img {
+        width: 60vw;
+    }
+    .navbar a {
+        font-size: 2rem;
+        margin-left: 2rem;
+    }
+    .contact form {
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .btn-group {
+        flex-direction: column;
+        align-items: center;
+    }
+    .service-box {
+        height: auto;
+        padding: 3rem 2rem;
+    }
+}
+@media (max-width: 768px) {
+    html {
+        font-size: 50%;
+    }
+    #menu-icon {
+        display: block;
+        cursor: pointer;
+    }
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: var(--bg-color);
+        flex-direction: column;
+        align-items: center;
+        display: none;
+    }
+    .navbar.active {
+        display: flex;
+    }
+    .navbar a {
+        margin: 2rem 0;
+        font-size: 2.2rem;
+    }
+    .heading {
+        font-size: 5rem;
+    }
+    .project-card img {
+        height: auto;
+    }
+    .services-container,
+    .projects-box {
+        grid-template-columns: 1fr;
+    }
+    .home-img img {
+        width: 80vw;
+    }
+    .input-field,
+    .contact form .input-box input,
+    .contact form textarea {
+        font-size: 2.2rem;
+        padding: 2rem;
+    }
+    .btn-send {
+        font-size: 2rem;
+        padding: 1.2rem 3.5rem;
+    }
 }
